# common-framework

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE.txt  README.md  README.rst  manage.py  pyproject.toml  requirements.txt  setup.py
common/: __init__.py  admin.py  apps.py  auth.py  commands.py  excel.py  fields.py  forms.py  logger.py  middleware.py  models.py  operations.py  router.py  runtests.py  settings.py  tasks.py  urls.py  utils.py  views.py  websocket.py
common/api/: api_views.py  base.py  config.py  fields.py  input_serializers.py  pagination.py  permissions.py  renderers.py  serializers.py  urls.py  utils.py  viewsets.py
common/locale/en/LC_MESSAGES/: django.po
common/locale/fr/LC_MESSAGES/: django.po
common/management/: __init__.py
common/management/commands/: abort_query.py  abort_sql.py  clear.py  run_websocket.py
common/migrations/: 0001_initial.py  0001_initial_squashed_0015_auto_20231201.py  0002_auto_20160531.py  0003_auto_20160801.py  0004_auto_20161219.py  0005_auto_20170214.py  0006_auto_20170905.py  0007_auto_20180210.py  0008_auto_20180302.py  0009_auto_20181010.py  0010_auto_20181202.py  0011_auto_20190130.py  0011_auto_20190201.py  0012_auto_20210420.py  0013_auto_20210620.py  0014_auto_20210701.py  0015_auto_20231201.py  __init__.py
common/templates/common/: cache.html  delete_selected.html  scripts.js
common/templatetags/: tools.py
common/tests/: __init__.py  test_api.py  test_utils.py  urls.py
project/: settings.py  urls.py
