[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "common-framework"
dynamic = ["version"]
description = "All-in-one framework for Django and Django REST Framework"
readme = "README.md"
license = ""
authors = [
    { name = "Marc Debureaux", email = "marc@debureaux.fr" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "Django>=3",
    "djangorestframework>=3",
]

[project.urls]
Homepage = "https://github.com/debnet/common-framework"

[tool.hatch.version]
path = "common/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/common",
]

[tool.hatch.build.targets.wheel]
include = [
    "/common",
]
